--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     build: .
     command: uv run manage.py runserver 0.0.0.0:8000
     volumes:
-      - ./app/:/app/
+      - .:/app
     ports:
       - 8000:8000
     env_file:
